data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_308.wast
;; 9. **Testing Loop Initialization with Alternating Nop and Functional Instructions**:    - Within a loop, alternate `nop` instructions with functional operations (e.g., arithmetic). Ensure `wizard_engine` initializes the context correctly to prevent infinite loops.    - Constraint: `nop` should not affect execution of functional instructions or exit conditions.

(assert_invalid
  (module
    (func $loop-with-nop (loop $loop (nop) (i32.const 1) (i32.add) (br_if $loop (i32.const 0))))
  "type mismatch"
)